--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,7 +32,7 @@ jobs:
           make fmt-check
 
   test:
-    needs: [check, check-all-features]
+    needs: [check]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -44,7 +44,7 @@ jobs:
         run: make test
 
   test-macos:
-    needs: [check, check-all-features]
+    needs: [check]
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -56,7 +56,7 @@ jobs:
         run: make test
 
   cargo-hack:
-    needs: [check, check-all-features]
+    needs: [check]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -69,7 +69,7 @@ jobs:
         run: make hack
 
   dependencies-are-sorted:
-    needs: [check, check-all-features]
+    needs: [check]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
