add star federation license (MIT)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ documentation = "https://docs.rs/datastar"
 edition = "2024"
 homepage = "https://data-star.dev"
 keywords = ["datastar", "backend", "axum", "rocket"]
-license = "MIT OR Apache-2.0"
+license = "MIT"
 name = "datastar"
 readme = "README.md"
 repository = "https://github.com/starfederation/datastar-rust"
