--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,3 +110,7 @@ required-features = ["axum", "tracing"]
 [[example]]
 name = "rocket-hello"
 required-features = ["rocket"]
+
+[[example]]
+name = "rocket-hello-channel"
+required-features = ["rocket"]
