--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,41 +25,47 @@ axum = ["dep:axum", "dep:serde", "dep:serde_json"]
 http2 = []
 rocket = ["dep:rocket"]
 tracing = ["dep:tracing"]
-warp = ["dep:warp", "dep:serde", "dep:serde_json", "dep:serde_urlencoded", "dep:bytes"]
+warp = [
+    "dep:warp",
+    "dep:serde",
+    "dep:serde_json",
+    "dep:serde_urlencoded",
+    "dep:bytes",
+]
 
 [dependencies]
-axum = { version = "0.8.4", default-features = false, optional = true, features = [
+axum = { version = "0.8", default-features = false, optional = true, features = [
     "query",
     "tokio",
     "json",
 ] }
-chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
-rocket = { version = "0.5.1", default-features = false, optional = true }
+bytes = { version = "1", optional = true }
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
+rocket = { version = "0.5", default-features = false, optional = true }
 serde = { version = "1", default-features = false, optional = true, features = [
     "derive",
 ] }
 serde_json = { version = "1", default-features = false, optional = true, features = [
     "std",
 ] }
-tracing = { version = "0.1.41", optional = true }
-warp = { version = "0.4.2", default-features = false, optional = true, features = ["server"] }
 serde_urlencoded = { version = "0.7", optional = true }
-bytes = { version = "1", optional = true }
+tracing = { version = "0.1", optional = true }
+warp = { version = "0.4", default-features = false, optional = true, features = ["server"] }
 
 [dev-dependencies]
 asynk-strim = { version = "0.1" }
 axum = { version = "0.8.4" }
 indexmap = { version = "2.11", features = ["serde"] }
-reqwest = { version = "0.12.23", features = ["json", "stream"] }
-rocket = { version = "0.5.1", features = ["json"] }
+reqwest = { version = "0.13", features = ["json", "stream"] }
+rocket = { version = "0.5", features = ["json"] }
 serde = { version = "1", default-features = false, features = ["derive"] }
 serde_json = { version = "1", default-features = false, features = ["std"] }
-tokio = { version = "1.47.1", features = ["full"] }
-tokio-stream = { version = "0.1.17" }
-tracing = { version = "0.1.41" }
-tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
-tracing-test = { version = "0.2.5" }
-warp = { version = "0.4.2" }
+tokio = { version = "1", features = ["full"] }
+tokio-stream = { version = "0.1" }
+tracing = { version = "0.1" }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-test = { version = "0.2" }
+warp = { version = "0.4" }
 
 [lints.rust]
 unreachable_pub = "deny"
