--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -84,3 +84,13 @@ jobs:
         working-directory: .
         run: |
           make sort-check
+
+  semver-checks:
+    needs: [check]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - name: Check semver
+        uses: obi1kenobi/cargo-semver-checks-action@v2
+        with:
+          rust-toolchain: ${{env.RUST_TOOLCHAIN}}
